# ros2_linux_30d_bootcamp

./: .gitignore  README.md
data/local_map_cropper/: cropped_map.pgm  cropped_map.yaml
docs/: w1_d1_linux_cmds.md  w1_d2_linux_cmds.md  w1_d3_ros2_cmd.md  w1_d4_env_check.md  w1_d5_ros2_node_topic.md  w1_d6_ros2_cli_service_action_param.md  w1_d7_ws_build_run.md  w1_notes_question_answers.md  w2_d1_topic_probe_readme.md  w2_d2_probe_rules.md  w2_d2p5_launch_probe.md  w2_d3_rclcpp_min_node.md  w2_d3p5_output_contract.md  w2_d4_ros2_qos_for_nav2.md  w2_d5_tf_guard.md  w2_d6_tf_guard_config.md  w2_d7_goal_sender.md  w3_d1_nav2_lifecycle_playbook.md  w3_d2_nav2_healcheck.md  w3_d3_bag_record.md  w3_d4_bag_play.md  w3_d5_pipeline_example.md  w3_d6_daily_checklist.md  w3_d7_case01.md  w3_d7_weekly_report.md  w4_d1_tools_polish.md  w4_d2_demo_3min.md  w4_d3_playbook_tf.md  w4_d4_playbook_qos_map_rviz.md  w4_d5_playbook_lifecycle.md  w4_d6_playbook_action_nav2.md  w4_d7_nav2_troubleshooting_playbook.md  w4_d7_playbook_bag.md  地图裁剪功能包测试日志（local_map_cropper）.md
results/: w2_d7_map1_5runs.csv  w3_d6_regression_dryrun.csv  w3_d7_map1_5runs.csv  w3_d7_map2_5runs.csv  w3_d7_map3_5runs.csv
ros2_ws/src/cpp_min_node/: CMakeLists.txt  (+1 more)
ros2_ws/src/local_map_cropper/: package.xml  setup.cfg  setup.py
ros2_ws/src/local_map_cropper/local_map_cropper/: crop_map_node.py
scripts/: trail.sh  w1_d1_log_run.sh  w1_d3_cleanup_ros2.sh  w1_d4_env_ros2.sh  w1_d4_trail.sh  w3_d2_nav2_healthcheck.sh  w3_d3_bag_record.sh  w3_d4_bag_play.sh  w3_d6_run_regression.sh  w4_d8_summarize_results.py
(+14 files in other folders)
